partly fix "#463 Starting OJ with java9 throws several exceptions" on windows
"
java.lang.NoClassDefFoundError: javax/xml/bind/JAXBException
at org.openjump.ext.viewmanager.ViewManagerExtension.configure(ViewManagerExtension.java:21)
"